Fix for contact form focus on mobile devices

--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -46,7 +46,7 @@
     height: fit-content;
 }
 
-input[type=text],
+input,
 select,
 textarea {
     width: 100%;
